@@ -10,6 +10,8 @@
    Patch from djm@.
  - (dtucker) [configure.ac] Disable pointer-sign warnings on gcc 4.0+
    since they're not useful right now.  Patch from djm@.
+ - (dtucker) [openbsd-compat/getgrouplist.c] Sync OpenBSD revs 1.10 - 1.2 (ANSI
+   prototypes, removal of "register").
 
 20051105
  - (djm) OpenBSD CVS Sync
@@ -3252,4 +3254,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.3959 2005/11/10 03:46:48 dtucker Exp $
+$Id: ChangeLog,v 1.3960 2005/11/10 04:56:44 dtucker Exp $
